# MamaM

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
lib/migrations/: deploy.js
lib/sdk/: constants.d.ts  constants.js  initializeContext.d.ts  initializeContext.js
lib/sdk/instructions/: initUserOnMarket.d.ts  initUserOnMarket.js  initializeAmm.d.ts  initializeAmm.js  initializeExchange.js  (+7 more)
programs/MamaM/: Cargo.toml
programs/MamaM/src/: constants.rs  errors.rs  lib.rs  macros.rs
programs/MamaM/src/instructions/: init_user_on_market.rs  initialize_exchange.rs  initialize_market.rs  mod.rs  state.rs
programs/MamaM/src/instructions/amm/: deposit_amm.rs  init_amm_on_market.rs  initialize_amm.rs  mod.rs  update_price.rs
programs/MamaM/src/instructions/order/: mod.rs  place_order.rs  serum_utils.rs
programs/MamaM/src/instructions/state/: amm.rs  ema.rs  exchange.rs  mod.rs
programs/MamaM/src/utils/: mod.rs  pda.rs
programs/MamaM/utils/: ema.rs
sdk/: constants.ts  idlToTs.mjs  index.ts  initializeContext.ts
sdk/instructions/: depositAmm.ts  initAmmOnMarket.ts  initUserOnMarket.ts  initializeAmm.ts  initializeExchange.ts  initializeMarket.ts  placeOrder.ts  updatePrice.ts
sdk/scripts/: crankUpdatePrice.ts  depositAmm.ts  initAmmOnMarket.ts  initUserOnMarket.ts  initializeAmm.ts  initializeExchange.ts  initializeMarket.ts  loadOrderbook.ts  placeOrder.ts  updatePrice.ts
sdk/types/: context.ts  mamam-types.ts  solanaTypes.ts  walletType.ts
sdk/utils/: generic.ts  loadOrderbook.ts  pda.ts  serum.ts
tests/: MamaM.ts
(+27 files in other folders)
